Bug 415409 - False detection of a matching investment cash dividend transaction
Summary: False detection of a matching investment cash dividend transaction
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: onlinebanking (other bugs)
Version First Reported In: 5.0.7
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-20 17:53 UTC by Thomas Baumgart
Modified: 2019-12-20 18:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2019-12-20 17:53:49 UTC
SUMMARY
Importing two cash dividend transactions that reference different investment accounts but have the same amount are treated as the same transaction and matched.

STEPS TO REPRODUCE
1. Import an OFX cash dividend transaction into the corresponding account
2. Import an OFX cash dividend transaction with the same amount into a different account

OBSERVED RESULT
Second transaction is matched with the first

EXPECTED RESULT
Two transactions in different accounts are shown
Comment 1 Thomas Baumgart 2019-12-20 17:59:54 UTC
Git commit c17568b8c82b59ad72b07d2db4ab7181757b4bfe by Thomas Baumgart.
Committed on 20/12/2019 at 17:59.
Pushed by tbaumgart into branch '5.0'.

Assign bankid to correct split

The bankid used to detect duplicate transactions was assigned to the
wrong split (the one that identifies the category). This change places
the bankid in the split that references the investment account.
FIXED-IN: 5.0.8

M  +22   -20   kmymoney/converter/mymoneystatementreader.cpp

https://commits.kde.org/kmymoney/c17568b8c82b59ad72b07d2db4ab7181757b4bfe
Comment 2 Thomas Baumgart 2019-12-20 18:01:19 UTC
Git commit 6ed6175828ac1b027d1120eb7fabd3e1d239e5c9 by Thomas Baumgart.
Committed on 20/12/2019 at 18:00.
Pushed by tbaumgart into branch 'master'.

Assign bankid to correct split

The bankid used to detect duplicate transactions was assigned to the
wrong split (the one that identifies the category). This change places
the bankid in the split that references the investment account.
FIXED-IN: 5.0.8
(cherry picked from commit c17568b8c82b59ad72b07d2db4ab7181757b4bfe)

M  +22   -20   kmymoney/converter/mymoneystatementreader.cpp

https://commits.kde.org/kmymoney/6ed6175828ac1b027d1120eb7fabd3e1d239e5c9