Assign bankid to correct split

The bankid used to detect duplicate transactions was assigned to the
wrong split (the one that identifies the category). This change places
the bankid in the split that references the investment account.

BUG: 415409
FIXED-IN: 5.0.8
(cherry picked from commit c17568b8c82b59ad72b07d2db4ab7181757b4bfe)